[package]
name = "chronic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.19"
uuid = { version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.20"
chrono = "0.4.19"
chrono-tz = "0.5.3"